ML Notes Part 1

--- a/eric's_exploratory_analysis.ipynb
+++ b/eric's_exploratory_analysis.ipynb
@@ -1250,6 +1250,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d41ee1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#looking for relationship between"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e925cccb",
    "metadata": {},
